[tool.poetry]
name = "saku"
version = "0.1.9"
description = ""
authors = ["hppRC <hpp.ricecake@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=0.12"]
# build-backend = "poetry.core.masonry.api"
build-backend = "maturin"
