[package]
name = "saku-py"
version = "0.1.9"
edition = "2021"
readme = "README.md"

[lib]
name = "saku"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.51"
pyo3 = {version = "0.15.1", features = ["extension-module"]}
regex = "1.5.4"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "my_benchmark"
harness = false