[tool.poetry]
name = "saku"
version = "0.1.13"
description = ""
authors = ["Hayato Tsukagoshi <hpp.ricecake@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "maturin>=0.12"]
# build-backend = "poetry.core.masonry.api"
build-backend = "maturin"